# ScoutSavant

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/db/: connection.py  migrations.py  schema.py  transforms.py
backend/ingest/: derived.py  game_ingest.py  season_ingest.py  statcast.py
backend/models/: requests.py  responses.py
backend/query/: counts.py  filters.py  pitches.py  sequences.py  summary.py  usage.py
backend/routers/: data.py  games.py  ingest.py  players.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/api/: client.ts  counts.ts  filters.ts  games.ts  pitches.ts  players.ts  sequences.ts  summary.ts  usage.ts
frontend/src/components/: ActiveFilterBar.tsx  ArsenalTable.tsx  CountStrip.tsx  MetricCards.tsx  SequenceMatrix.tsx
frontend/src/components/filters/: CountFilter.tsx  InningRangeFilter.tsx  OutcomeFilter.tsx  PitchTypeFilter.tsx  StandFilter.tsx  TTOFilter.tsx
frontend/src/components/layout/: FilterPanel.tsx  TopNav.tsx
frontend/src/components/strikezone/: PitchDot.tsx  PitchTooltip.tsx  StrikeZoneMap.tsx  ZoneGrid.tsx
frontend/src/hooks/: useDashboardData.ts  useIngest.ts
frontend/src/pages/: ScoutPage.tsx
frontend/src/store/: filterStore.ts
frontend/src/types/: api.ts  filters.ts  pitch.ts
